# GangerEngine_old

./: .gitignore  .travis.yml  BuildLinux.sh  BuildMac.sh  BuildVisualStudio.bat  CMakeLists.txt  Errors.cpp  Errors.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  IOFiles.cpp  IOFiles.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  LICENSE  MainGame.cpp  MainGame.h  PicoPNG.cpp  PicoPNG.h  README.md  ReadMe.txt  Sprite.cpp  Sprite.h  Vertex.h  appveyor.yml  index.html  main.cpp  params.json  setup-travis.sh
Demos/BallGame/: Ball.cpp  Ball.h  BallController.cpp  BallController.h  BallRenderer.cpp  BallRenderer.h  CMakeLists.txt  Grid.cpp  Grid.h  MainGame.cpp  MainGame.h
Demos/BallGame/BallGame.xcodeproj/: project.pbxproj
Demos/Hunt4Fun/Shaders/: ColorShading.frag  ColorShading.vert
Demos/Hunt4Fun/headers/: Agent.h  Gun.h  Level.h  MainGame.h  Player.h
Demos/Hunt4Fun/sources/: Human.cpp  Hunt4Fun.cpp  Level.cpp  MainGame.cpp  Zombie.cpp
Demos/NinjaPlatformer/: App.cpp  App.h  Box.cpp  Box.h  CMakeLists.txt  Capsule.cpp  Capsule.h  EditorScreen.cpp  EditorScreen.h  GameplayScreen.cpp  GameplayScreen.h  LevelReaderWriter.cpp  Light.h  MainMenuScreen.cpp  MainMenuScreen.h  Player.cpp  Player.h  main.cpp
Demos/NinjaPlatformer/Shaders/: color.frag  color.vert  lightShading.frag  lightShading.vert
Demos/Pong/: App.cpp  App.h  Ball.cpp  Ball.h  CMakeLists.txt  Environment.cpp  Environment.h  GameplayScreen.cpp  GameplayScreen.h  Player.cpp  Player.h  ScreenIndices.h  main.cpp
Demos/Shooting2Much/: App.cpp  App.h  GameplayScreen.cpp  GameplayScreen.h  Player.cpp  Player.h  ScreenIndices.h  main.cpp
Demos/ZombieGame/: Agent.cpp  Bullet.cpp  Bullet.h  CMakeLists.txt  Gun.cpp  MainGame.cpp  MainGame.h  Player.cpp
Demos/ZombieGame/Levels/: level1.txt
Demos/ZombieGame/Shaders/: textureShading.frag  textureShading.vert
Demos/ZombieGame/ZombieGame.xcodeproj/: project.pbxproj
GangerEngine.xcodeproj/: project.pbxproj
GangerEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Shaders/: ColorShading.frag  ColorShading.vert
Textures/: Thumbs.db
include/: GLSLProgram.h  GLTexture.h  IOManager.h  ImageLoader.h  PicoPNG.h  ResourceManager.h  Sprite.h  TextureCache.h  Vertex.h
include/GangerEngine/: AudioEngine.h  Camera2D.h  CppUtils.h  DebugRenderer.h  Errors.h  GLSLProgram.h  GLTexture.h  GUI.h  GangerEngine.h  GangerErrors.h  IGameScreen.h  IMainGame.h  IOManager.h  ImageLoader.h  InputManager.h  ParticleBatch2D.h  ParticleEngine2D.h  PicoPNG.h  ResourceManager.h  ScreenList.h  Sprite.h  SpriteBatch.h  SpriteFont.h  TextureCache.h  TileSheet.h  Timing.h  Vertex.h  Window.h
src/: AudioEngine.cpp  Camera2D.cpp  DebugRenderer.cpp  Errors.cpp  GLSLProgram.cpp  GUI.cpp  GangerEngine.cpp  GangerErrors.cpp  IMainGame.cpp  IOManager.cpp  ImageLoader.cpp  InputManager.cpp  ParticleBatch2D.cpp  ParticleEngine2D.cpp  PicoPNG.cpp  ResourceManager.cpp  ScreenList.cpp  Sprite.cpp  SpriteBatch.cpp  SpriteFont.cpp  TextureCache.cpp  Timing.cpp  Window.cpp
